--- a/07-Pig-Game/starter/style.css
+++ b/07-Pig-Game/starter/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -66,9 +68,11 @@ main {
 .player--active {
   background-color: rgba(255, 255, 255, 0.4);
 }
+
 .player--active .name {
   font-weight: 700;
 }
+
 .player--active .score {
   font-weight: 400;
 }
@@ -132,9 +136,11 @@ main {
 .btn--new {
   top: 4rem;
 }
+
 .btn--roll {
   top: 39.3rem;
 }
+
 .btn--hold {
   top: 46.1rem;
 }
@@ -164,4 +170,27 @@ main {
 .player--winner .name {
   font-weight: 700;
   color: #c7365f;
+}
+
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 1023px) {
+  html {
+    font-size: 32%;
+  }
+}
+
+@media (max-width: 767px) {
+  html {
+    font-size: 32%;
+  }
+}
+
+@media (max-width: 576px) {
+  html {
+    font-size: 18%;
+  }
 }
