--- a/15-Mapty/starter/style.css
+++ b/15-Mapty/starter/style.css
@@ -71,7 +71,8 @@ a:visited {
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
   margin-bottom: 1.75rem;
-  cursor: pointer;
+  /* cursor: pointer; */
+  position: relative;
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -90,7 +91,17 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
   grid-column: 1 / -1;
+
 }
+
+.workout__title::before {
+  content: 'X';
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+}
+
 
 .workout__details {
   display: flex;
@@ -121,6 +132,7 @@ a:visited {
   padding: 1.5rem 2.75rem;
   margin-bottom: 1.75rem;
 
+
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0.5rem 2.5rem;
@@ -129,6 +141,8 @@ a:visited {
   height: 9.25rem;
   transition: all 0.7s, transform 1ms;
 }
+
+
 
 .form.hidden {
   transform: translateY(-30rem);
